# steam-workshop-downloader

./: .gitignore  AGENT.md  IDA_REVERSE_SUMMARY.md  LICENSE  README.md  pyproject.toml  workshop_download.py
.github/workflows/: ci.yml
src/swd/: __init__.py  __main__.py  cli.py  constants.py  utils.py
src/swd/dll/: __init__.py  buffer.py  loader.py
src/swd/download/: __init__.py  item.py
src/swd/steam/: __init__.py  patch.py  proxy.py  session.py  workshop.py
src/swd/ui/: __init__.py  log.py  progress.py
test_multi/3683834622/About/: About.xml  PublishedFileId.txt
test_multi/3685058533/1.6/Defs/: AutoTrackingRecipes.xml  PlantCategory.xml
test_multi/3685058533/About/: About.xml
test_multi/3685058533/Languages/Russian/Keyed/: Misc.xml
test_multi/3685058533/VBrewE/1.6/Defs/: ATRecipes.xml
test_output/3685058533/: LoadFolders.xml
test_output/3685058533/About/: PublishedFileId.txt
test_output/3685058533/Languages/English/Keyed/: Misc.xml
tests/: _fakes.py  conftest.py  test_cli.py  test_dll_smoke.py  test_download_item.py  test_log.py  test_progress.py  test_proxy.py  test_utils.py
