[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swd"
version = "5.0.0"
description = "Pure-Python Steam Workshop downloader with ctypes-based VSZa decompression"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["steam", "workshop", "downloader", "steamcmd", "valve"]
authors = [
    { name = "xywf221" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "steam[client]>=1.4",
    "PySocks>=1.7",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
swd = "swd.cli:cmd_swd"

[project.urls]
Homepage = "https://github.com/xywf221/steam-workshop-downloader"
Issues = "https://github.com/xywf221/steam-workshop-downloader/issues"
Source = "https://github.com/xywf221/steam-workshop-downloader"

[tool.hatch.build.targets.wheel]
packages = ["src/swd"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"